Fixed docs.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-jlink-plugin@1807111 13f79535-47bb-0310-9956-ffa450edef68